[gd_scene load_steps=10 format=3 uid="uid://bwvy7ppfmpxy4"]

[ext_resource type="Script" path="res://scripts/castle.gd" id="1_642ny"]
[ext_resource type="Texture2D" uid="uid://b3x64q4rpdgvd" path="res://assets/background/throne_room.png" id="2_2ex7t"]
[ext_resource type="Texture2D" uid="uid://k72v007dxr2r" path="res://assets/ui/ui_next_button.gif" id="3_2r8hi"]
[ext_resource type="Texture2D" uid="uid://ca525to53ksl0" path="res://assets/portraits/princess_outfit_1.png" id="3_xhg88"]
[ext_resource type="Texture2D" uid="uid://w23mgl37apm0" path="res://assets/portraits/princess_outfit_1_head_neutral.png" id="4_qpba5"]
[ext_resource type="Texture2D" uid="uid://b6yw05pue20u" path="res://assets/ui/ui_next_button_hover.gif" id="4_vyjn7"]
[ext_resource type="Texture2D" uid="uid://hmdgu8uyd35u" path="res://assets/portraits/king.png" id="5_ikepg"]
[ext_resource type="Theme" uid="uid://dejysjjwhwal8" path="res://data/theme/title_theme.tres" id="6_hfgnm"]
[ext_resource type="Texture2D" uid="uid://cvj6er8tgav0r" path="res://assets/ui/message_window_2.png" id="8_rpd6x"]

[node name="Castle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_642ny")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -149.0
offset_top = 1.0
offset_right = 1333.0
offset_bottom = 666.0
texture = ExtResource("2_2ex7t")
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 2
offset_left = 41.0
offset_top = 37.0
offset_right = 341.0
offset_bottom = 268.0
size_flags_vertical = 3
theme = ExtResource("6_hfgnm")

[node name="MenuContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 31.0
offset_right = -32.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_hfgnm")
alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -16.0
offset_right = 1332.0
offset_bottom = 649.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0156863, 0.0156863, 0.215686)
metadata/_edit_lock_ = true

[node name="MainCharacter" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 628.0
offset_top = 67.0
offset_right = 1144.0
offset_bottom = 670.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="body" type="Sprite2D" parent="MainCharacter"]
position = Vector2(-70, 208)
texture = ExtResource("3_xhg88")
centered = false

[node name="head" type="Sprite2D" parent="MainCharacter"]
position = Vector2(235, 127)
texture = ExtResource("4_qpba5")

[node name="King" type="Sprite2D" parent="."]
visible = false
position = Vector2(333, 345)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_ikepg")
flip_h = true
metadata/_edit_lock_ = true

[node name="DialoguePanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 213.0
offset_top = 444.0
offset_right = 923.0
offset_bottom = 629.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("8_rpd6x")
expand_mode = 1
stretch_mode = 4

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 23.0
offset_right = -72.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24

[node name="DialogueButton" type="TextureButton" parent="DialoguePanel"]
custom_minimum_size = Vector2(52, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -67.0
offset_right = -11.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
action_mode = 0
texture_normal = ExtResource("3_2r8hi")
texture_hover = ExtResource("4_vyjn7")
